--- a/About.html
+++ b/About.html
@@ -103,11 +103,11 @@
       <h3>Questions about the site?</h3>
     </div>
     <div class="rightWeb">
-       <a href="mailto:grode2@wisc.edu?Subject=TEDxQuestions" target="_top">Contact Us</a>
+       <a href="http://www.classixpro.com/#contact" target="_blank">Contact Us</a>
     </div>
   </div>
 
-  <center><a href="" target="_blank">
+  <center><a href="http://www.classixpro.com" target="_blank">
                      <img src="logo.png" width="85" height="85" style="text-decoration:none;"onmouseover="this.src='logo_hover.png';" onmouseout="this.src='logo.png';" />
                          </a></center>
 
