added form. Delete if necessary

--- a/Join.html
+++ b/Join.html
@@ -64,7 +64,7 @@
                 <div class="row3">
                     <textarea type="text" name="message" placeholder="Your Message" required></textarea>
                     <input type="submit" value="Send" id="contact-form-send">
-               <!--      <input type="hidden" name="_cc" value="grode2@wisc.edu" /> -->
+                    <input type="hidden" name="_cc" value="lbbrown2@wisc.edu" />
                 </div>
         </form>
       </div>
