--- a/Join.html
+++ b/Join.html
@@ -43,8 +43,8 @@
   <div id="hero">
     <img src="banner3.jpg">
     <h1>Interested in joining?</h1>
+    <h4>**You must be a UW-Madison student to join**</h4>
   </div>
-</div>
 <body>
   <div id ="contactImage">
     <!-- <a href="mailto:smlalonde@wisc.edu?Subject=Questions!" target="_top">Email us</a> to join the list.  -->
