added ted harro

--- a/Events.html
+++ b/Events.html
@@ -78,6 +78,8 @@
       <li class="speaker"><img src="sangita.jpg" style="height:210px;"><br>
         <p>Sangita Kasturi brings more than 15 years of global expertise to help organizations successfully grow their diverse talent. As the CEO of Action Inclusion, she helps develop insights and practices to overcome issues of conscious and unconscious bias and build workplace inclusion. Solutions are offered through consultations, seminars, workshops and coaching.</p>
       </li>
+       <li class="speaker"><img src="ted_harro.jpg" style="height:210px;"><br>
+      <p>Ted Harro is a strategy facilitator who has a secret life as a bread baker on weekends. he has worked across industries as diverse as medical devices, higher education, software startups, insurance, and soil management (yes, that's a thing). His work helps gain insight into what makes organizations and people tick. He blogs on his own site and the Huffington Post about these topics.</p></li>
       <!-- TED HARRO. WAITING FOR BIO
       <li class="speaker"><img src="ted_harro.jpg" style="height:210px;"><br>
         <p></p>
