events javascript edits

--- a/Events.html
+++ b/Events.html
@@ -45,10 +45,10 @@
 </div>
 <body>
    <ul class="tab">
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openEvent(event, '2016')" id="defaultOpen">2016</a></li>
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openEvent(event, '2015')">2015</a></li>
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openEvent(event, '2014')">2014</a></li>
-  <li><a href="javascript:void(0)" class="tablinks" onclick="openEvent(event, '2013')">2013</a></li>
+  <li><a href="#" class="tablinks" onclick="openEvent(event, '2016'); return false;" id="defaultOpen">2016</a></li>
+  <li><a href="#" class="tablinks" onclick="openEvent(event, '2015'); return false;">2015</a></li>
+  <li><a href="#" class="tablinks" onclick="openEvent(event, '2014'); return false;">2014</a></li>
+  <li><a href="#" class="tablinks" onclick="openEvent(event, '2013'); return false;">2013</a></li>
 </ul>
 <div id="2016" class="tabcontent">
    <div class ="pastIMG">
