--- a/index.html
+++ b/index.html
@@ -44,13 +44,6 @@
 <div id="hero">
     <img src="hero.jpg">
     <h1>TEDxUWMadison</h1>
-
-
-
-
-
-
-
       <!-- AUTOMATIC CAROUSEL FOR INDEX.HTML AFTER 2016 EVENT. -->
   <!-- <img class="mySlides" src="hero.jpg" style="border:none;">
         <img class="mySlides" src="tedx.jpg" style="border:none;">
@@ -165,6 +158,7 @@
             src="https://www.youtube.com/embed/GGUIhVZ6lrY" frameborder="0" allowfullscreen>
         </iframe></div>
   <br><br>
+  <p>We are officially sold out of our tickets for our 2016 event: Thinking Differently. See you December 10th!</p>
 <div class="backgroundIMG">
   <h3><span>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is branded TEDx, where x = independently organized TED event.
   </span></h3>
