Nav edits, index body clean up

--- a/Join.html
+++ b/Join.html
@@ -43,7 +43,7 @@
   <div id="hero">
     <img src="banner3.jpg">
     <h1>Interested in joining?</h1>
-    <h4>**You must be a UW-Madison student to join**</h4>
+    <p>**You must be a UW-Madison student to join**</p>
   </div>
 <body>
   <div id ="contactImage">
