Nav edits, index body clean up

--- a/About.html
+++ b/About.html
@@ -52,7 +52,7 @@
         </iframe>
   <div class ="aboutBody">
     <h1>Meet the exec board</h1>
-    <h2>Click <a href="Exec_bios.html">HERE</a> to learn more about the exec board!</h2>
+    <h2><a href="Exec_bios.html">Learn More</a></h2>
     <ul class="execContainer">
     <a href="Exec_bios.html#bio1">
       <li class="execMember"><img src="tom.png"onmouseover="this.src='tom_hover.png';"
