--- a/Exec_bios.html
+++ b/Exec_bios.html
@@ -63,7 +63,7 @@
       <p>Mitchell first learned about TEDxUWMadison at the student org fair freshman year and has been in love ever since. His favorite TED Talk is "Why city flags may be the worst-designed thing you've never noticed" by Roman Mars. Mitchell enjoys being outside and is very active year round. During the winter he enjoys cross country and downhill skiing. Mitchell is also a member of Euchre club. His career goal is to be an Epidemiologist.</p><br></a>
       <a name="bio6"><img src="Zahra.jpg" height="300" width="300"><br>
         <p>Marketing Director</p>
-      <p>Zahra is a junior here at the UW-Madison, and has been a member of the TEDx ever since her freshman year. As a marketing student, she wants to pursue to a career in digital marketing and/or advertisement. She hopes to use her marketing skills around the world for the greater good. In addition to watching TEDx videos during her free time, she loves reading a good book, baking, Instagramming anything and everything, and discussing good tv shows and movies.</p><br></a>
+      <p>Zahra is a junior here at the UW-Madison, and has been a member of TEDx ever since her freshman year. As a marketing student, she wants to pursue to a career in digital marketing and/or advertisement. She hopes to use her marketing skills around the world for the greater good. In addition to watching TEDx videos during her free time, she loves reading a good book, baking, Instagramming anything and everything, and discussing good tv shows and movies.</p><br></a>
       <a name="bio7"><img src="nick.jpg" height="300" width="300"><br>
         <p>Financial Committee Chair</p>
       <p>Nick joined TEDx as a Sophomore looking to get involved in a group where he could provide a substantial impact as a general member. As an avid listener of Ted talks, TEDx was a perfect fit! When not controlling the finance activities for TEDx, you will probably find Nick watching or playing sports, more specifically, the Packers and Bucks.</p><br></a>
@@ -73,7 +73,7 @@
 
       <a name="bio9"><img src="shelby.jpg" height="300" width="300"><br>
       <p>Graphic Designer</p>
-      <p>Shelby is a sophomore here at the UW-Madison, and has been a member of the TEDx ever since her freshman year. As Creative Director, she enjoys employing her artistic background to implement innovative design and branding for the TEDx group. When she’s not designing, Shelby enjoys disco, bulk food sections of grocery stores, and sometimes art.</p><br></a>
+      <p>Shelby is a sophomore here at the UW-Madison, and has been a member of TEDx ever since her freshman year. As Creative Director, she enjoys employing her artistic background to implement innovative design and branding for the TEDx group. When she’s not designing, Shelby enjoys disco, bulk food sections of grocery stores, and sometimes art.</p><br></a>
   </center>
   </div>
 </body>
