--- a/Join.html
+++ b/Join.html
@@ -52,7 +52,7 @@
 
      <!-- if they dont want the form, delete it -->
       <div id="contactForm">
-        <form action="https://formspree.io/smlalonde@wisc.edu" method="POST" target="_blank">
+        <form action="https://formspree.io/tedxuwmad@gmail.com" method="POST" target="_blank">
             <ul class="container">
                 <li class="row">
                     <input type="text" name="name" placeholder="Name" required>
