image selection edits...need to make sure same height

--- a/index.html
+++ b/index.html
@@ -80,11 +80,8 @@
 
 
 
-
-
-
         <!-- CODE TO CREATE A MANUAL CAROUSEL WITH THE PHOTOS FROM 2016. -->
-  <div class="photos">
+ <!--  <div class="photos">
       <img class="mySlides" src="hero.jpg" style="border:none;">
       <img class="mySlides" src="tedx.jpg" style="border:none;">
       <img class="mySlides" src="banner2.jpg" style="border:none;">
@@ -138,7 +135,7 @@
           selector[slideIndex-1].className += " active";
 }
       </script>
-  </div>
+  </div> -->
 
 
 
