add active pages

--- a/About.html
+++ b/About.html
@@ -25,7 +25,7 @@
           <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
           <li><a href="Events.html">Events</a></li>
           <li><a href="Join.html">Become a Member</a></li>
-          <li><a href="About.html">About</a></li>
+          <li class="onPage"><a href="About.html">About</a></li>
         </div>
       </ul>
   </div>
