--- a/Events.html
+++ b/Events.html
@@ -22,7 +22,7 @@
         </div>
         <div class="right">
           <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
-          <li><a href="Events.html">Events</a></li>
+          <li class="onPage"><a href="Events.html">Events</a></li>
           <li><a href="Join.html">Become a Member</a></li>
           <li><a href="About.html">About</a></li>
         </div>
