--- a/Join.html
+++ b/Join.html
@@ -23,7 +23,7 @@
         <div class="right">
           <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
           <li><a href="Events.html">Events</a></li>
-          <li><a href="Join.html">Become a Member</a></li>
+          <li class="onPage"><a href="Join.html">Become a Member</a></li>
           <li><a href="About.html">About</a></li>
         </div>
       </ul>
@@ -35,7 +35,7 @@
 </header>
 <div id="menu">
   <ul>
-    <a href="index.html"><li>Home</li></a>
+    <a href="index.html" ><li>Home</li></a>
     <a href="About.html"><li>About</li></a>
     <a href="Events.html"><li>Events</li></a>
     <a href="Join.html"><li>Join</li></a>
