--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="nav">
       <ul class="mainMenu">
         <div id="left">
-          <li><a href="index.html">Home</a></li>
+          <li class="onPage"><a href="index.html">Home</a></li>
         </div>
         <div class="right">
           <li><a href="FavoriteTalks.html">Our Favorite Talks</a></li>
@@ -35,7 +35,7 @@
 </header>
 <div id="menu">
   <ul>
-    <a href="index.html"><li>Home</li></a>
+    <a href="index.html" ><li>Home</li></a>
     <a href="About.html"><li>About</li></a>
     <a href="Events.html"><li>Events</li></a>
     <a href="Join.html"><li>Join</li></a>
