--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <div class="footerList">
             <a href="http://www.ted.com/" target="_blank">This independent TEDx event is operated under license from TED.</a>
             </div>
-              <p> &#169; 2016 Designed and developed by Jessica Tang and Aaron Grode.</p>
+              <p> &#169; 2016 Jessica Tang and Aaron Grode.</p>
         </div>
       </div>
   </div>
