--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
     }
 </script>
 <div id="hero">
-    <img src="hero.jpg">
-    <h1>TEDxUWMadison</h1>
-      <!-- AUTOMATIC CAROUSEL FOR INDEX.HTML AFTER 2016 EVENT. -->
-  <!-- <img class="mySlides" src="hero.jpg" style="border:none;">
+         <!-- AUTOMATIC CAROUSEL FOR INDEX.HTML AFTER 2016 EVENT. -->
+   <img class="mySlides" src="hero.jpg" style="border:none;">
         <img class="mySlides" src="tedx.jpg" style="border:none;">
         <img class="mySlides" src="banner2.jpg" style="border:none;">
         <img class="mySlides" src="banner3.jpg" style="border:none;">
@@ -75,91 +73,12 @@
       x[slideIndex-1].style.display = "block"; 
       setTimeout(carousel, 5000); // Change image every x seconds if x is the x in "x0000"
   }
-  </script>-->
-
-
-
-
-
-
-
+  </script>
+    <h1>TEDxUWMadison</h1>
 </div>
-
-
-
-
-
-
-        <!-- CODE TO CREATE A MANUAL CAROUSEL WITH THE PHOTOS FROM 2016. -->
- <!--  <div class="photos">
-      <img class="mySlides" src="hero.jpg" style="border:none;">
-      <img class="mySlides" src="tedx.jpg" style="border:none;">
-      <img class="mySlides" src="banner2.jpg" style="border:none;">
-      <img class="mySlides" src="banner3.jpg" style="border:none;">
-
-      <a class="leftSwitch" onclick="plusDivs(-1)">&#10094;</a>
-      
-      
-      <span class="select active" onclick="currentDiv(0)">&nbsp;</span>
-      <span class="select" onclick="currentDiv(1)">&nbsp;</span>
-      <span class="select" onclick="currentDiv(2)">&nbsp;</span>
-      <span class="select" onclick="currentDiv(3)">&nbsp;</span>
-
-      <a class="rightSwitch" onclick="plusDivs(+1)">&#10095;</a>
-
-
-      <script type="text/javascript">
-        var slideIndex = 1;
-      showDivs(slideIndex);
-
-      function plusDivs(n) {
-          showDivs(slideIndex += n);
-      }
-      function currentDiv(n){
-        var i;
-        var x = document.getElementsByClassName("mySlides");
-          var selector = document.getElementsByClassName("select");
-         for (i = 0; i < x.length; i++) {
-              x[i].style.display = "none"; 
-          }
-          for (i = 0; i < selector.length; i++) {
-             selector[i].className = selector[i].className.replace(" active", "");
-          }
-          x[n].style.display = "block";  
-          selector[n].className += " active";
-      }
-
-      function showDivs(n) {
-          var i;
-          var x = document.getElementsByClassName("mySlides");
-          var selector = document.getElementsByClassName("select");
-          if (n > x.length) {slideIndex = 1}    
-          if (n < 1) {slideIndex = x.length}
-          for (i = 0; i < x.length; i++) {
-             x[i].style.display = "none";  
-          }
-          for (i = 0; i < selector.length; i++) {
-             selector[i].className = selector[i].className.replace(" active", "");
-          }
-          x[slideIndex-1].style.display = "block";  
-          selector[slideIndex-1].className += " active";
-}
-      </script>
-  </div> -->
-
-
-
-
-
-
-
-
-
-
-
-
 <body>
   <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2>
+  <h2><a href="Events.html">2016 event</a></h2>
         <!-- <h2>Watch our video to learn more</h2> -->
          <div class="fav_talk"><iframe 
             src="https://www.youtube.com/embed/GGUIhVZ6lrY" frameborder="0" allowfullscreen>
