add carasol and images

--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
 </script>
 <div id="hero">
          <!-- AUTOMATIC CAROUSEL FOR INDEX.HTML AFTER 2016 EVENT. -->
-   <img class="mySlides" src="hero.jpg" style="border:none;">
-        <img class="mySlides" src="tedx.jpg" style="border:none;">
-        <img class="mySlides" src="banner2.jpg" style="border:none;">
-        <img class="mySlides" src="banner3.jpg" style="border:none;">
+   <img class="mySlides" src="1b.jpg" style="border:none;">
+        <img class="mySlides" src="6b.jpg" style="border:none;">
+        <img class="mySlides" src="hero.jpg" style="border:none;">
+        <img class="mySlides" src="7b.jpg" style="border:none;">
+        <img class="mySlides" src="3b.jpg" style="border:none;">
+
 
   <script type="text/javascript">
     var slideIndex = 0;
@@ -77,7 +79,7 @@
     <h1>TEDxUWMadison</h1>
 </div>
 <body>
-  <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2>
+  <!-- <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2> -->
   <h2><a href="Events.html">2016 event</a></h2>
         <!-- <h2>Watch our video to learn more</h2> -->
          <div class="fav_talk"><iframe 
