add link specificity

--- a/About.html
+++ b/About.html
@@ -150,7 +150,7 @@
             </div>
           <div class="footerListWords">
             <!-- <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a> -->
-            <a href="Join.html">Become a member</a>
+            <a href="Join.html#join">Become a member</a>
             <!-- <a href="http://www.ted.com/" target="_blank">Events</a> -->
           </div>
         </div>
