--- a/Events.html
+++ b/Events.html
@@ -66,7 +66,7 @@
 </ul>
 <div id="2016" class="tabcontent">
    <div class ="pastIMG">
-    <h2>2016 - Thinking Differently</h2>
+    <a name="16"><h2>2016 - Thinking Differently</h2></a>
     </div>
 
 
@@ -324,7 +324,7 @@ document.getElementById("defaultOpen").click();
             </div>
             <div class="footerListWords">
             <!-- <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a> -->
-            <a href="Join.html">Become a member</a>
+            <a href="Join.html#join">Become a member</a>
             <!-- <a href="http://www.ted.com/" target="_blank">Events</a> -->
           </div>
         </div>
