--- a/Join.html
+++ b/Join.html
@@ -56,7 +56,7 @@
 <div class="mobileh1">
   <div id="hero">
     <img src="banner3.jpg">
-    <h1>Interested in joining?</h1>
+    <a name="join"><h1>Interested in joining?</h1></a>
     <p>**You must be a UW-Madison student to join**</p>
   </div>
 <body>
@@ -137,7 +137,7 @@
             </div>
             <div class="footerListWords">
             <!-- <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a> -->
-            <a href="Join.html">Become a member</a>
+            <a href="Join.html#join">Become a member</a>
             <!-- <a href="http://www.ted.com/" target="_blank">Events</a> -->
           </div>
         </div>
