--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </div>
 <body>
   <!-- <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2> -->
-  <h2><a href="Events.html">2016 event</a></h2>
+  <h2><a href="Events.html#16">2016 event</a></h2>
         <!-- <h2>Watch our video to learn more</h2> -->
          <div class="fav_talk"><iframe 
             src="https://www.youtube.com/embed/GGUIhVZ6lrY" frameborder="0" allowfullscreen>
@@ -120,7 +120,7 @@
             </div>
             <div class="footerListWords">
             <!-- <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">Home</a> -->
-            <a href="Join.html">Become a member</a>
+            <a href="Join.html#join">Become a member</a>
             <!-- <a href="http://www.ted.com/" target="_blank">Events</a> -->
           </div>
         </div>
