--- a/About.html
+++ b/About.html
@@ -117,13 +117,9 @@
       <h3>Questions about the site?</h3>
     </div>
     <div class="rightWeb">
-       <a href="http://www.classixpro.com/#contact" target="_blank">Contact Us</a>
+       <a href="http://www.aarongrode.com/#contact" target="_blank">Contact Us</a>
     </div>
   </div>
-
-  <center><a href="http://www.classixpro.com" target="_blank">
-                     <img src="logo.png" width="85" height="85" style="text-decoration:none;"onmouseover="this.src='logo_hover.png';" onmouseout="this.src='logo.png';" />
-                         </a></center>
 
 </body>
 <footer>
