--- a/About.html
+++ b/About.html
@@ -112,14 +112,14 @@
     </div>
   </div>
 
-  <div class="contactWeb">
+  <!-- <div class="contactWeb">
     <div class ="leftWeb">
       <h3>Questions about the site?</h3>
     </div>
     <div class="rightWeb">
        <a href="http://www.aarongrode.com/#contact" target="_blank">Contact Us</a>
     </div>
-  </div>
+  </div> -->
 
 </body>
 <footer>
