--- a/Events.html
+++ b/Events.html
@@ -146,25 +146,39 @@
 
     <center>
       <ul class="speakerContainer">
-      <li class = "speaker"><img src="Jay.jpg" style="height:400px;">
+      <li class = "speaker"><iframe 
+            src="https://www.youtube.com/embed/rIDeY92WVUQ?list=PLsRNoUx8w3rP8aG1jCR9_X_1V0AfL6sMr" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
         <p>Jay Flores, STEM Ambassador at Rockwell Automation, has a mission: instilling a passion for science, technology, engineering, and mathematics (STEM) in today’s young minds. Jay is masterful in connecting STEM to everyday life and motivating students to become tomorrow’s innovators. </p><br>
       </li>
-      <li class="speaker"><img src="Sara.jpg" style="height:210px;"><br>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/XfbNW1JQMCg?list=PLsRNoUx8w3rP8aG1jCR9_X_1V0AfL6sMr" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
         <p>Sara L. McKinnon. McKinnon is an Assistant Professor of Rhetoric, Politics and Culture in the Department of Communication Arts at the University of Wisconsin-Madison. Her research and teaching is in the areas of intercultural rhetoric, globalization studies, and gender studies. </p>
       </li>
-      <li class="speaker"><img src="ethan.png" style="height:210px;"><br>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/OWjhicVrHZw?list=PLsRNoUx8w3rP8aG1jCR9_X_1V0AfL6sMr" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
         <p>Ethan Young is a Founder and President of Insight Wisconsin, the premier organization for “Student Inventors” on the UW campus. Members work in interdisciplinary project teams on structured design projects proposed by researchers, corporate partners, and members themselves. Concurrently, Ethan is a sophomore Chemical Engineering student at the University of Wisconsin-Madison.</p>
       </li>
-      <li class="speaker"><img src="jones.jpg" style="height:210px;"><br>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/WrKckwirsFA?list=PLsRNoUx8w3rP8aG1jCR9_X_1V0AfL6sMr" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
         <p>Corinne Jones, MS, CCC-SLP, is a PhD candidate at the University of Wisconsin-Madison with the Neuroscience Training Program and Department of Communication Sciences & Disorders. She is a licensed and certified speech-language pathologist with a specific focus in evaluation of swallowing disorders, and her research examines early, sub-clinical changes in voice and swallowing function in patients with Parkinson disease.</p>
       </li>
-      <li class="speaker"><img src="ed.png" style="height:210px;"><br>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/OLIKvHsVjgE?list=PLsRNoUx8w3rP8aG1jCR9_X_1V0AfL6sMr" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
         <p>Ed Maxwell applies his love for and knowledge of learning to everything he does, including his personal practice of mindfulness. After earning his MBA from the Wisconsin School of Business, he founded Third Left Wellness, a company that offers onsite mindfulness training to employees. His goal is to apply mindfulness to the most pressing needs our organizations face.</p>
       </li>
-      <li class="speaker"><img src="sangita.jpg" style="height:210px;"><br>
+      <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/oR9sHmevvNQ?list=PLsRNoUx8w3rP8aG1jCR9_X_1V0AfL6sMr" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
         <p>Sangita Kasturi brings more than 15 years of global expertise to help organizations successfully grow their diverse talent. As the CEO of Action Inclusion, she helps develop insights and practices to overcome issues of conscious and unconscious bias and build workplace inclusion. Solutions are offered through consultations, seminars, workshops and coaching.</p>
       </li>
-       <li class="speaker"><img src="ted_harro.jpg" style="height:210px;"><br>
+       <li class="speaker"><iframe 
+            src="https://www.youtube.com/embed/8X1CIP1pKyk?list=PLsRNoUx8w3rP8aG1jCR9_X_1V0AfL6sMr" frameborder="0" allowfullscreen style="height:300px;">
+        </iframe>
       <p>Ted Harro is a strategy facilitator who has a secret life as a bread baker on weekends. He has worked across industries as diverse as medical devices, higher education, software startups, insurance, and soil management (yes, that's a thing). His work helps gain insight into what makes organizations and people tick. He blogs on his own site and the Huffington Post about these topics.</p></li>
       <!-- TED HARRO. WAITING FOR BIO
       <li class="speaker"><img src="ted_harro.jpg" style="height:210px;"><br>
