--- a/Events.html
+++ b/Events.html
@@ -141,7 +141,7 @@
       </script>
   </div>
   <h2><a href="https://www.facebook.com/pg/TEDxUWMadison-207233446083245/photos/?tab=album&album_id=834491740024076">View more</a></h2>
-   <p>Our 2016 event sold out in less than two minutes!</p>
+   <!-- <p>Our 2016 event sold out in less than two minutes!</p> -->
         <h1>Speakers</h1>
 
     <center>
