--- a/About.html
+++ b/About.html
@@ -107,7 +107,7 @@
     <div class="aboutTed">
       <img src="tedAbout.png">
     <p>TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics — from science to business to global issues — in more than 100 languages. Meanwhile, independently run TEDx events help share ideas in communities around the world.
-      Follow TED on <a href="http://twitter.com/TEDTalks" target="_blank">Twitter</a>, or on <a href="http://www.facebook.com/TED" target="_blank">Facebook</a>.
+      Follow TED on <a href="http://twitter.com/TEDTalks" target="_blank">Twitter</a>, or on <a href="http://www.facebook.com/TED" target="_blank">Facebook</a>.<br><br><br><br><br>
     </p>
     </div>
   </div>
