--- a/About.html
+++ b/About.html
@@ -117,7 +117,7 @@
       <h3>Questions about the site?</h3>
     </div>
     <div class="rightWeb">
-       <a href="http://www.aarongrode.com/#contact" target="_blank">Contact Us</a>
+       <a href="http://www.classixpro.com/#contact" target="_blank">Contact Us</a>
     </div>
   </div> 
 
