--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </script>
 <title>TEDxUWMadison</title>
-  <link rel="shortcut icon" href="x.png" type="image/x-icon" />  
+  <link rel="shortcut icon" href="x.png" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <div id="nav">
       <ul class="mainMenu">
@@ -41,7 +41,7 @@
     <a href="Join.html"><li>Join</li></a>
     <a href="FavoriteTalks.html"><li>Favorite Talks</li></a>
   </ul>
-</div> 
+</div>
 <script type="text/javascript">
     function toggle_visibility(id) {
        var e = document.getElementById(id);
@@ -53,7 +53,8 @@
 </script>
 <div id="hero">
          <!-- AUTOMATIC CAROUSEL FOR INDEX.HTML AFTER 2016 EVENT. -->
-   <img class="mySlides" src="1b.jpg" style="border:none;">
+         <img src="2017/2017.jpg" >
+   <!-- <img class="mySlides" src="1b.jpg" style="border:none;">
         <img class="mySlides" src="6b.jpg" style="border:none;">
         <img class="mySlides" src="hero.jpg" style="border:none;">
         <img class="mySlides" src="7b.jpg" style="border:none;">
@@ -68,33 +69,40 @@
       var i;
       var x = document.getElementsByClassName("mySlides");
       for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none"; 
+        x[i].style.display = "none";
       }
       slideIndex++;
-      if (slideIndex > x.length) {slideIndex = 1} 
-      x[slideIndex-1].style.display = "block"; 
+      if (slideIndex > x.length) {slideIndex = 1}
+      x[slideIndex-1].style.display = "block";
       setTimeout(carousel, 5000); // Change image every x seconds if x is the x in "x0000"
   }
-  </script>
-    <h1>TEDxUWMadison</h1>
+  </script> -->
 </div>
+  <!-- <h1>TEDxUWMadison</h1> -->
+  <br /><br />
+  <hr>
+
 <body>
   <!-- <h2>What is <a href="https://www.ted.com/about/programs-initiatives/tedx-program" target="_blank">TEDx?</a></h2> -->
-  <h2><a href="Events.html#16">2016 event</a></h2>
+  <h2><a href="Events.html#17">2017 event</a></h2>
+  <!-- <h3>We have a few tickets left! Grab them before they are gone!</h3>
+  <h3><a href="https://www.eventbrite.com/e/tedx-uwmadison-broadening-horizons-2017-tickets-39453520542?utm-medium=discovery&utm-campaign=social&utm-content=attendeeshare&aff=escb&utm-s" target="_blank">Buy Tickets</a></h3> -->
+
         <!-- <h2>Watch our video to learn more</h2> -->
-         <div class="fav_talk"><iframe 
+         <div class="fav_talk"><iframe
             src="https://www.youtube.com/embed/GGUIhVZ6lrY" frameborder="0" allowfullscreen>
         </iframe></div>
   <p><br></p>
-<div class="backgroundIMG">
-  <h3><span>In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is branded TEDx, where x = independently organized TED event.
-  </span></h3>
-  
-  <img src="mainBackIMG.jpg">
+
+<div id ="about" class="sectionOne">
+    <br><br><br><br><br>
+    <hr class="dark">
+    <p class="light">
+In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. Our event is branded TEDx, where x = independently organized TED event.
+    </p>
+    <br><br><br><br><br>
 </div>
-<div class="backgroundIMGsmall">
-    <img src="mainBackIMG.jpg">
-</div>
+
 </body>
 <footer>
   <div id="footer">
